<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:text="@string/choose_panchyat"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/dark_boder">

                <Spinner
                    android:id="@+id/sppinerPanchyat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:text="@string/vo_choose"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"

                android:background="@drawable/dark_boder">

                <Spinner
                    android:id="@+id/sppinerVo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="15dp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:text="@string/month"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.6"
                android:background="@drawable/dark_boder">

                <Spinner
                    android:id="@+id/sppinerMonth"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:text="@string/year"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"

                android:background="@drawable/dark_boder">

                <Spinner
                    android:id="@+id/sppinerYear"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/getData"
            android:padding="10dp"
            android:textColor="#FFF"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@color/buttoncolor"
            android:text="Get Data From Server"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerviewVoMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:visibility="visible" />


</LinearLayout>